WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81933
[Qt][WK2] default families are not set in QWebPreferences
https://bugs.webkit.org/show_bug.cgi?id=81933
Summary
[Qt][WK2] default families are not set in QWebPreferences
Pierre Rossi
Reported
2012-03-22 10:13:58 PDT
[Qt][WK2] default families are not set in QWebPreferences
Attachments
Patch
(3.20 KB, patch)
2012-03-22 10:20 PDT
,
Pierre Rossi
kenneth
: review+
Details
Formatted Diff
Diff
Patch
(1.34 KB, patch)
2012-03-26 11:11 PDT
,
Rafael Brandao
vestbo
: review+
vestbo
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pierre Rossi
Comment 1
2012-03-22 10:20:25 PDT
Created
attachment 133288
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-03-23 04:27:03 PDT
Comment on
attachment 133288
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=133288&action=review
> Source/WebKit2/UIProcess/API/qt/qwebpreferences.cpp:101 > +void QWebPreferencesPrivate::initFontDefaults()
WebKit usually usees initialize and not init
> Source/WebKit2/UIProcess/API/qt/qwebpreferences.cpp:124 > + setFontFamily(FixedFont, defaultFont.defaultFamily()); > + > +}
unneeded newline!
Kenneth Rohde Christiansen
Comment 3
2012-03-23 04:27:30 PDT
Comment on
attachment 133288
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=133288&action=review
>> Source/WebKit2/UIProcess/API/qt/qwebpreferences.cpp:101 >> +void QWebPreferencesPrivate::initFontDefaults() > > WebKit usually usees initialize and not init
Also doesn DefaultFonts make more sense than FontDefaults?
Pierre Rossi
Comment 4
2012-03-26 10:05:05 PDT
Committed
r112116
: <
http://trac.webkit.org/changeset/112116
>
Rafael Brandao
Comment 5
2012-03-26 11:11:03 PDT
Reopening to attach new patch.
Rafael Brandao
Comment 6
2012-03-26 11:11:08 PDT
Created
attachment 133849
[details]
Patch This patch has broken qt bots. This is the build fix, please land this ASAP.
Tor Arne Vestbø
Comment 7
2012-03-26 11:39:33 PDT
Landed in
r112132
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug