[Qt][WK2] default families are not set in QWebPreferences https://bugs.webkit.org/show_bug.cgi?id=81933

This would result in an attempt to create FontPlatformData
with the -webkit- prefixed family name.
Logic adapted from QWebSettings.

Patch by Pierre Rossi <pierre.rossi@nokia.com> on 2012-03-26
Reviewed by Kenneth Rohde Christiansen.

* UIProcess/API/qt/qwebpreferences.cpp:
(QWebPreferencesPrivate::createPreferences):
(QWebPreferencesPrivate::initFontDefaults):
* UIProcess/API/qt/qwebpreferences_p_p.h:

Canonical link: https://commits.webkit.org/99558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112116 268f45cc-cd09-0410-ab3c-d52691b4dbfc